# cosmic-rdp-server

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  flake.nix  justfile  test-rdp.sh
crates/cosmic-ext-rdp-broker/: Cargo.toml
crates/cosmic-ext-rdp-broker/src/: broker.rs  config.rs  dbus.rs  main.rs  pam_auth.rs  proxy.rs  session.rs  spawner.rs  x224.rs
crates/cosmic-ext-rdp-server/: Cargo.toml
crates/cosmic-ext-rdp-server/src/: clipboard.rs  dbus.rs  egfx.rs  main.rs  server.rs  sound.rs  tls.rs
crates/cosmic-ext-rdp-settings/: Cargo.toml
crates/cosmic-ext-rdp-settings/i18n/en/: cosmic-ext-rdp-settings.ftl
crates/cosmic-ext-rdp-settings/src/: app.rs  config.rs  i18n.rs  message.rs
crates/cosmic-ext-rdp-settings/src/pages/: display.rs  features.rs  mod.rs
crates/cosmic-rdp-server/: Cargo.toml
crates/cosmic-rdp-server/src/: clipboard.rs  config.rs  dbus.rs  egfx.rs  main.rs  server.rs  tls.rs
crates/cosmic-rdp-settings/: Cargo.toml
crates/cosmic-rdp-settings/i18n/en/: cosmic-rdp-settings.ftl
crates/cosmic-rdp-settings/src/: app.rs  config.rs  main.rs  message.rs
crates/cosmic-rdp-settings/src/pages/: display.rs  features.rs  general.rs  mod.rs  security.rs
crates/rdp-capture/: Cargo.toml
crates/rdp-capture/src/: audio_stream.rs  compositor.rs  frame.rs  lib.rs  pipewire_stream.rs  portal.rs  spa_meta.rs
crates/rdp-dbus/: Cargo.toml
crates/rdp-dbus/src/: client.rs  config.rs  constants.rs  lib.rs  server.rs  types.rs
crates/rdp-encode/: Cargo.toml
crates/rdp-encode/src/: bitmap.rs  gstreamer_enc.rs  lib.rs
crates/rdp-input/: Cargo.toml
crates/rdp-input/src/: keymap.rs  lib.rs  libei.rs
data/: com.system76.CosmicRdpServer.desktop  com.system76.CosmicRdpSettings.desktop  config.example.toml  io.github.olafkfreund.CosmicExtRdpServer.desktop  io.github.olafkfreund.CosmicExtRdpSettings.desktop
nix/: broker-module.nix  home-manager.nix  module.nix  package.nix
