[workspace]
resolver = "2"
members = [
  "crates/cosmic-rdp-server",
  "crates/rdp-capture",
  "crates/rdp-input",
  "crates/rdp-encode",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/cosmic-rdp-server"
authors = ["Olaf K. Freund"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# RDP protocol
ironrdp-server = { version = "0.10", features = ["helper"] }
ironrdp-cliprdr = "0.5"
ironrdp-core = "0.1"
ironrdp-displaycontrol = "0.5"

# Async utilities
async-trait = "0.1"
bytes = "1"

# Screen capture
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
pipewire = "0.8"

# Video encoding
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# Clipboard
arboard = "3"

# Input injection
enigo = { version = "0.6", features = ["libei_tokio"] }

# TLS
tokio-rustls = "0.26"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
rdp-capture = { path = "crates/rdp-capture" }
rdp-input = { path = "crates/rdp-input" }
rdp-encode = { path = "crates/rdp-encode" }
