[workspace]
resolver = "2"
members = [
  "crates/cosmic-rdp-server",
  "crates/cosmic-rdp-settings",
  "crates/rdp-capture",
  "crates/rdp-input",
  "crates/rdp-encode",
  "crates/rdp-dbus",
]

[workspace.metadata.crane]
name = "cosmic-rdp-server"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/cosmic-rdp-server"
authors = ["Olaf K. Freund"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# RDP protocol
ironrdp-server = { version = "0.10", features = ["helper"] }
ironrdp-cliprdr = "0.5"
ironrdp-core = "0.1"
ironrdp-displaycontrol = "0.5"
ironrdp-pdu = "0.7"
ironrdp-rdpsnd = "0.7"

# Async utilities
async-trait = "0.1"
bytes = "1"

# Screen capture
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
pipewire = "0.8"

# Video encoding
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# Clipboard
arboard = "3"

# Input injection (direct libei protocol via reis)
reis = { version = "0.5", features = ["tokio"] }
rustix = { version = "0.38", features = ["event"] }

# TLS
tokio-rustls = "0.26"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# D-Bus
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Utilities
dirs = "6"

# Internal crates
rdp-capture = { path = "crates/rdp-capture" }
rdp-input = { path = "crates/rdp-input" }
rdp-encode = { path = "crates/rdp-encode" }
rdp-dbus = { path = "crates/rdp-dbus" }
