[workspace]
resolver = "2"
members = [
  "crates/cosmic-ext-rdp-server",
  "crates/cosmic-ext-rdp-settings",
  "crates/cosmic-ext-rdp-broker",
  "crates/rdp-capture",
  "crates/rdp-input",
  "crates/rdp-encode",
  "crates/rdp-dbus",
]

[workspace.metadata.crane]
name = "cosmic-ext-rdp-server"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/olafkfreund/cosmic-ext-rdp-server"
authors = ["Olaf K. Freund"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# RDP protocol (git fork with EGFX support)
ironrdp-server = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP", features = ["helper"] }
ironrdp-cliprdr = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-core = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-displaycontrol = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-pdu = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-rdpsnd = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-dvc = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }
ironrdp-egfx = { git = "https://github.com/olafkfreund/cosmic-ext-IronRDP" }

# Async utilities
async-trait = "0.1"
bytes = "1"

# Screen capture
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
pipewire = "0.8"

# Video encoding
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

# Clipboard
arboard = "3"

# Input injection (direct libei protocol via reis)
reis = { version = "0.5", features = ["tokio"] }
rustix = { version = "0.38", features = ["event", "process"] }

# TLS
tokio-rustls = "0.26"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
x509-cert = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# D-Bus
zbus = { version = "5", default-features = false, features = ["tokio"] }

# PAM authentication (broker)
pam-client = { version = "0.5", features = ["tokio"] }

# Unix utilities
nix = { version = "0.29", features = ["user", "signal", "process"] }

# Utilities
dirs = "6"
serde_json = "1"

# Internal crates
rdp-capture = { path = "crates/rdp-capture" }
rdp-input = { path = "crates/rdp-input" }
rdp-encode = { path = "crates/rdp-encode" }
rdp-dbus = { path = "crates/rdp-dbus" }
