[package]
name = "cosmic-ext-rdp-settings"
description = "Settings UI for the RDP server for the COSMIC™ desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cosmic-ext-rdp-settings"
path = "src/main.rs"

[dependencies]
# Internal
rdp-dbus.workspace = true

# COSMIC / GUI
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["multi-window", "tokio", "winit", "wgpu"] }

# D-Bus
zbus = { workspace = true, default-features = false }

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Localization
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8"

