[package]
name = "cosmic-rdp-server"
description = "RDP server for the COSMIC Desktop Environment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cosmic-rdp-server"
path = "src/main.rs"

[dependencies]
# Internal crates
rdp-capture.workspace = true
rdp-input.workspace = true
rdp-encode.workspace = true
rdp-dbus.workspace = true

# Input injection
enigo.workspace = true

# RDP protocol
ironrdp-server.workspace = true
ironrdp-cliprdr.workspace = true
ironrdp-core.workspace = true
ironrdp-displaycontrol.workspace = true
ironrdp-pdu.workspace = true
ironrdp-rdpsnd.workspace = true

# Clipboard
arboard.workspace = true

# Async utilities
async-trait.workspace = true
bytes.workspace = true

# Async runtime
tokio.workspace = true

# TLS
tokio-rustls.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

# CLI
clap.workspace = true

# Configuration
serde.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# D-Bus
zbus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
