[package]
name = "rdp-capture"
description = "Screen capture abstraction for cosmic-ext-rdp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Screen capture
ashpd.workspace = true
pipewire.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
