[package]
name = "rdp-dbus"
description = "Shared D-Bus types and config structs for cosmic-rdp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
dirs.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
zbus = { workspace = true, default-features = false }
